src/styles/global.scss
@import url('https://fonts.cdnfonts.com/css/axiforma');
@import url('https://fonts.cdnfonts.com/css/cera-compact-pro');
@import url('https://fonts.cdnfonts.com/css/avenir-next-cyr');
@import url('https://fonts.cdnfonts.com/css/gilroy-bold');

@import './mixin';
@media screen and (min-width: 1860px) {
  html {
    display: flex;
    justify-content: center;
  }
}
body {
  background: linear-gradient(0deg, #fff, #fff);
  max-width: 1860px;
  // min-width: 1265px;
  font-family: 'Cera Pro', sans-serif;

  @apply bg-white relative;
  &::after,
  &::before {
    opacity: 0.5;
    filter: blur(100px);
  }
  &::before {
    @include after(
      $w: 50vw,
      $h: 1000px,
      $t: -200px,
      $l: 0px,
      $bg: linear-gradient(0deg, #ffdb803c 0%, #ffdb8069 100%)
    );
    border-bottom-right-radius: 10%;
    border-top-right-radius: 10%;
  }
  &::after {
    @include after(
      $w: 50vw,
      $h: 1000px,
      $t: -200px,
      $r: 0px,
      $bg: linear-gradient(0deg, #47cbf339 0%, #47cbf363 100%)
    );
    border-bottom-left-radius: 10%;
    border-top-left-radius: 10%;
  }
}

footer {
  background-image: linear-gradient(0deg, #fd5c2f2a 0%, #fff 100%);
}

.glass-bar {
  border: 1px solid rgba(224, 224, 224, 0.25);
  background-color: rgba(243, 239, 239, 0.547);
  box-shadow: 0 0 10px 1px rgba(255, 255, 255, 0.25);
  backdrop-filter: blur(15px);
}

.detailView4 {
}

section,
footer,
nav {
  min-width: 1024px;
}
@media screen and (min-width: 1024px) {
  .detailView4 {
    width: calc(55% - 11rem) !important;
  }
}

@tailwind base;
@tailwind components;
@tailwind utilities;

